src/examples/fail/div_0.c
//This will fail

return 1 / 0;
